updated openapi specs notworking: pvp code
